objects/ssot__ActionPlanTemplateAssignment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActionPlanTemplateVersionId__c</fullName>
        <label>Action Plan Template Version</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignmentQueueName__c</fullName>
        <label>Assignment Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignmentSize__c</fullName>
        <label>Assignment Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AssignmentType__c</fullName>
        <label>Assignment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssociatedObjectId__c</fullName>
        <label>Associated Object</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssociatedObjectObject__c</fullName>
        <label>Associated Object Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssociatedRecordType__c</fullName>
        <label>Associated Record Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Action Plan Template Assignment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TemplateDisplayOrderNumber__c</fullName>
        <label>Template Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818173067_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanTemplateAssignment_ActionP_rel</label>
        <referenceTo>ssot__ActionPlanTemplateVersion__dlm</referenceTo>
        <relationshipLabel>ActionPlanTemplateAssignment_ActionP_rel</relationshipLabel>
        <relationshipName>rel_1719818173067_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819621593_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanTemplateAssignment_Associa_rel</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>ActionPlanTemplateAssignment_Associa_rel</relationshipLabel>
        <relationshipName>rel_1719819621593_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040567519_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanTemplateAssignment_Associa_rel</label>
        <referenceTo>ssot__ProgramTermApplicationTimeline__dlm</referenceTo>
        <relationshipLabel>ActionPlanTemplateAssignment_Associa_rel</relationshipLabel>
        <relationshipName>rel_1731040567519_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>